--- a/app.json
+++ b/app.json
@@ -22,6 +22,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
+         "softwareKeyboardLayoutMode": "pan",
         "backgroundColor": "#FFFFFF"
       }
     },
